--- a/css/staff.css
+++ b/css/staff.css
@@ -84,6 +84,7 @@ h2 {
 .owner {background-color: rgba(244, 65, 65, .5);}
 .manager {background-color: rgba(66, 134, 244, .5);}
 .admin {background-color: rgba(59, 211, 42, .5);}
+.dev {background-color: rgba(0, 0, 255, 0.3);
 
 /* Footer */
 footer {
